// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeywordsColumnConfiguration component should render column "category": category 1`] = `
<DocumentFragment>
  <a
    href="/keywords/KW-9992"
  >
    Molecular function
  </a>
</DocumentFragment>
`;

exports[`KeywordsColumnConfiguration component should render column "children": children 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/keywords/KW-9992"
      >
        Molecular function
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`KeywordsColumnConfiguration component should render column "definition": definition 1`] = `
<DocumentFragment>
  Enzyme whose activity is modified by the noncovalent binding of an allosteric effector at a site other than the active site. This binding mediates conformational changes, altering its catalytic or binding properties.
</DocumentFragment>
`;

exports[`KeywordsColumnConfiguration component should render column "gene_ontologies": gene_ontologies 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        class="external-link"
        href="https://www.ebi.ac.uk/QuickGO/term/GO:0003824"
        rel="noopener"
        target="_blank"
      >
        catalytic activity (GO:0003824)
        <test-file-stub
          data-testid="external-link-icon"
          width="12.5"
        />
      </a>
    </li>
    <li>
      <a
        class="external-link"
        href="https://www.ebi.ac.uk/QuickGO/term/GO:0008152"
        rel="noopener"
        target="_blank"
      >
        metabolic process (GO:0008152)
        <test-file-stub
          data-testid="external-link-icon"
          width="12.5"
        />
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`KeywordsColumnConfiguration component should render column "graph": graph 1`] = `
<DocumentFragment>
  <div
    class="graph"
    style="height: calc(5em * 3);"
  >
    <svg
      class="arrows"
    />
    <div
      class="container"
      style="height: calc(5em * 3);"
    >
      <div
        class="keyword-node"
      >
        <span
          class="node"
        >
          <a
            href="/keywords/KW-9992"
          >
            Molecular function
          </a>
        </span>
      </div>
      <div
        class="keyword-node"
      >
        <span
          class="node"
        >
          Allosteric enzyme
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`KeywordsColumnConfiguration component should render column "id": id 1`] = `
<DocumentFragment>
  <a
    href="/keywords/KW-0021"
  >
    KW-0021
  </a>
</DocumentFragment>
`;

exports[`KeywordsColumnConfiguration component should render column "links": links 1`] = `<DocumentFragment />`;

exports[`KeywordsColumnConfiguration component should render column "name": name 1`] = `
<DocumentFragment>
  Allosteric enzyme
</DocumentFragment>
`;

exports[`KeywordsColumnConfiguration component should render column "parents": parents 1`] = `<DocumentFragment />`;

exports[`KeywordsColumnConfiguration component should render column "statistics": statistics 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/uniprotkb?query=%28keyword%3AKW-0021%29"
      >
        145,573 UniProtKB entries
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb?query=%28keyword%3AKW-0021%29+AND+%28reviewed%3Atrue%29"
      >
        2,513 reviewed UniProtKB entries
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb?query=%28keyword%3AKW-0021%29+AND+%28reviewed%3Afalse%29"
      >
        143,060 unreviewed UniProtKB entries
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`KeywordsColumnConfiguration component should render column "synonyms": synonyms 1`] = `<DocumentFragment />`;
